// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`api/queries/getTokenBalances > returns token balances in the right format on success 1`] = `
{
  "tokenBalances": [
    {
      "balanceMantissa": "10000",
      "token": {
        "address": "0x8301F2213c0eeD49a7E28Ae4c3e91722919B8B47",
        "asset": "/src/@venusprotocol/web3/img/busd.svg",
        "decimals": 18,
        "symbol": "BUSD",
      },
    },
    {
      "balanceMantissa": "10000",
      "token": {
        "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
        "asset": "/src/@venusprotocol/web3/img/lisUSD.png",
        "decimals": 18,
        "symbol": "lisUSD",
      },
    },
  ],
}
`;

exports[`api/queries/getTokenBalances > returns token balances, including BNB, in the right format on success 1`] = `
{
  "tokenBalances": [
    {
      "balanceMantissa": "10000",
      "token": {
        "address": "0x8301F2213c0eeD49a7E28Ae4c3e91722919B8B47",
        "asset": "/src/@venusprotocol/web3/img/busd.svg",
        "decimals": 18,
        "symbol": "BUSD",
      },
    },
    {
      "balanceMantissa": "10000",
      "token": {
        "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
        "asset": "/src/@venusprotocol/web3/img/lisUSD.png",
        "decimals": 18,
        "symbol": "lisUSD",
      },
    },
    {
      "balanceMantissa": "1000000000000000000",
      "token": {
        "address": "0x0000000000000000000000000000000000000000",
        "asset": "/src/@venusprotocol/web3/img/bnb.svg",
        "decimals": 18,
        "isNative": true,
        "symbol": "BNB",
      },
    },
  ],
}
`;
